# dwarfidl

./: .gitignore  .gitmodules  .hgignore  Makefile  Makefile.am  README.md  TODO.md  config.mk.in  configure.ac  dwarfidl.pc.in
.circleci/: config.yml
contrib/: Makefile  checkout.sh
examples/: dwarfhpp.cpp  dwarfidldump.cpp  test-ctypes.sh
include/: Makefile  cxx_model.hpp
include/dwarfidl/: create.hpp  cxx_model.hpp  dependency_ordering_cxx_target.hpp  dwarf_interface_walk.hpp  dwarfidlSimpleCLexer.h  dwarfidlSimpleCParser.h  dwarfidl_cxx_target.hpp  dwarfprint.hpp  lang.hpp  parser.h  parser_includes.h
lib/: Makefile
parser/: Makefile  dwarfidl-attr-keywords-dwarf3.inc  dwarfidl-lex.inc  dwarfidl-simple-rules.inc  dwarfidl-tag-keywords-dwarf3.inc  dwarfidl-tokens.inc  dwarfidl.g.m4  dwarfidlNew.g.m4  dwarfidlNewC.g  dwarfidlSimple.g.m4  dwarfidlSimple.g.tests  dwarfidlSimpleC.g  test_parser.c
printer/: Makefile  dwarfidldump.cpp  dwarfprint.cpp  print.cpp  print.hpp
src/: Makefile  create.cpp  cxx_dependency_order.cpp  cxx_model.cpp  dependency_ordering_cxx_target.cpp  dwarf-ocaml-ctypesgen.cpp  dwarf_interface_walk.cpp  dwarfhpp.cpp  dwarfidl_cxx_target.cpp  dwarfprint.cpp  dwarfprint.hpp  lang.cpp  old_dwarf_interface_walk.cpp  parse.cpp  print.cpp  test_create.cpp  test_dwarfprint.cpp
src/parser/: Makefile  dwarfidl-abbrev.inc  dwarfidl-rules.inc  dwarfidl-tokens.inc  dwarfidl.g.m4  test_parser.c
tests/: Makefile
tests/create/: create.cpp
tests/dwarfprint/: dwarfprint.cpp  sample-output.txt
tests/lang-make-dies/: dies.dwarfidl  hello.cpp  lang-make-dies.cpp
tests/ncurses_auto/: hello.ml  mk.inc
